2007-11-23 CTAF <>
	* fn : find name, script encapsulating find . -name
	* emacs : template replace GPLv2 by GPLv3
	* ct-ssh : bug: empty command doesnt work
	* grep : added color
	* grepr : added color for searched word
	* ct-installconf : complete support of ssft
	* ct-installconf/ct-profile : default ssft to console, not text
	* ct-installconf/ct-profile : argument to change mode
	* shell : mail notification work at epita

2007-11-21 CTAF <>
	* emacs : invert F12 and S-F12 to scroll up and down in the other window
	* ct-ssh : frontend for .ssh/config
	* ct-ssh : use ssft
	* replacer : replace all occurence of arg1 by arg2 in all file of the folder
	* recurse : display all file and/or folder recursively
	* shfunction : removed, functions added as program in bin (grepr, recurse, ...)
	* ctafconf-install, -configuration, -uninstall: symlink removed
	* moved .ctafconf to .config/ctafconf (freedesktop compliant)
	* updated README and ct-help

2007-11-09 CTAF <>
	* emacs : help: added shortcut for epita c header
	* emacs : updated epita emacs files, added php-mode

2007-11-08 CTAF <>
	* emacs : template for cpp (same as cc)

2007-11-07 CTAF <>
	* emacs : remove emacs.elc when installing

2007-11-06 CTAF <>
	* zsh : bug: disable only which builtin

2007-11-01 CTAF <>
	* env : support fink (/sw/bin)

2007-10-31 CTAF <>
	* zsh : which: use the system one

2007-10-30 CTAF <>
	* sudo_real : failsafe sudo
	* ls : support ls under macosx
	* ls : added color for ls under *bsd/osx
	* env : removed MAIL from env
	* env/alias : more generic way to source env/alias specific file

2007-10-20 CTAF <>
	* colormake : support french
	* emacs : support sconscript

2007-10-18 CTAF <>
	* ct-set-bg : removed set bg for gnome/kde
	* sudo: always change dir to ~ (avoid bug when doing sudo emacs for ex)

2007-04-21 CTAF <> 0.1.43
	* colorgaim.pl : color gaim log

2007-04-06 CTAF <>
	* colorwarper : bug with gmake corrected
	* README : updated

2007-04-05 CTAF <>