@@ -7,6 +7,7 @@
 	* ct-installconf : complete support of ssft
 	* ct-installconf/ct-profile : default ssft to console, not text
 	* ct-installconf/ct-profile : argument to change mode
+	* ssft.sh : better dialog support (support bsd too)
 	* shell : mail notification work at epita
 
 2007-11-21 CTAF <>
